# pyspark-datalake-example-2024

./: .env.example  .gitignore  README.md  pyproject.toml
WORK/hudi/: 0_hudi-hello-world.ipynb
WORK/iceberg/: 0_icerberg-hello-world.ipynb
src/pyspark_datalake_example_2024/: __init__.py
