[project]
name = "pyspark-datalake-example-2024"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "junkor-1011", email = "tomoyukizxy@gmail.com" }
]
dependencies = [
    "pyspark==3.4.3",
    "pandas>=2.2.2",
    "jupyterlab>=4.2.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pyarrow>=16.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyspark_datalake_example_2024"]
